--- a/src/app/pages/dashboard/category-tiles.component.html
+++ b/src/app/pages/dashboard/category-tiles.component.html
@@ -2,8 +2,8 @@
   <!-- Date Picker for selecting month -->
   <div class="col-lg-12 mb-4">
     <mat-form-field appearance="fill">
-      <mat-label>{{ defaultMonth.format('MMMM YYYY') }}</mat-label>
-      <input matInput [matDatepicker]="picker" [value]="defaultMonth.toDate()" (dateChange)="onMonthSelected($event)">
+      <mat-label>Wybierz miesiąc</mat-label>
+      <input matInput [matDatepicker]="picker" [value]="defaultMonth.toDate()" placeholder="MM/YYYY" (dateChange)="onMonthSelected($event)">
       <mat-datepicker #picker startView="multi-year" (monthSelected)="chosenMonthHandler($event, picker)" panelClass="example-month-picker"></mat-datepicker>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     </mat-form-field>
