--- a/src/app/pages/dashboard/category-tiles.component.html
+++ b/src/app/pages/dashboard/category-tiles.component.html
@@ -1,31 +1,52 @@
-<div class="row">
-  <!-- Date Picker for selecting month -->
-  <div class="col-lg-12 mb-4">
-    <mat-form-field appearance="fill">
-      <mat-label>Wybierz miesiąc</mat-label>
-      <input matInput [matDatepicker]="picker" [value]="defaultMonth.toDate()" placeholder="MM/YYYY" (dateChange)="onMonthSelected($event)">
-      <mat-datepicker #picker startView="multi-year" (monthSelected)="chosenMonthHandler($event, picker)" panelClass="example-month-picker"></mat-datepicker>
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    </mat-form-field>
-  </div>
-
-  <!-- Wyświetlanie kategorii jako kafelki -->
-  <div class="col-lg-4 col-md-6 mb-3" *ngFor="let category of categories">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">{{ category.name }}</h5>
-        <p class="card-text">{{ category.categoryType }}</p>
-        <p class="card-amount">{{ category.totalAmount | currency:'zł' }}</p>
-        <a [routerLink]="['/dashboard', category.id, 'transactions']" [queryParams]="{ month: defaultMonth.format('YYYY-MM') }" class="btn btn-primary">View Transactions</a>
-      </div>
+<div class="container">
+  <!-- Nagłówek Finanse -->
+  <div class="row mb-4">
+    <div class="col-lg-12">
+      <h1 class="text-left">Finanse</h1>
     </div>
   </div>
 
-  <!-- Kafelek do dodania nowej kategorii -->
-  <div class="col-lg-4 col-md-6 mb-3">
-    <div class="card add-category-card" (click)="openAddCategoryModal()">
-      <div class="card-body text-center">
-        <h5 class="card-title">+ Add New Category</h5>
+  <div class="row align-items-center mb-4">
+    <!-- Nagłówek Kategorie -->
+    <div class="col-lg-6 mb-4">
+      <div class="categories-header">
+        <h2>Kategorie</h2>
+      </div>
+    </div>
+
+    <!-- Date Picker for selecting month -->
+    <div class="col-lg-6 mb-4">
+      <mat-form-field appearance="fill">
+        <mat-label>Wybierz miesiąc</mat-label>
+        <input matInput [matDatepicker]="picker" [value]="defaultMonth.toDate()" placeholder="MM/YYYY"
+          (dateChange)="onMonthSelected($event)">
+        <mat-datepicker #picker startView="multi-year" (monthSelected)="chosenMonthHandler($event, picker)"
+          panelClass="example-month-picker"></mat-datepicker>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      </mat-form-field>
+    </div>
+  </div>
+
+  <!-- Wyświetlanie kategorii jako kafelki -->
+  <div class="row">
+    <div class="col-lg-4 col-md-6 mb-3" *ngFor="let category of categories">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">{{ category.name }}</h5>
+          <!-- <p class="card-text">{{ category.categoryType }}</p> -->
+          <p class="card-amount">{{ category.totalAmount | currency:'zł' }}</p>
+          <a [routerLink]="['/dashboard', category.id, 'transactions']"
+            [queryParams]="{ month: defaultMonth.format('YYYY-MM') }" class="btn btn-primary">Zobacz Transakcje</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Kafelek do dodania nowej kategorii -->
+    <div class="col-lg-4 col-md-6 mb-3">
+      <div class="card add-category-card" (click)="openAddCategoryModal()">
+        <div class="card-body text-center">
+          <h5 class="card-title">+ Dodaj Nową Kategorię</h5>
+        </div>
       </div>
     </div>
   </div>
