--- a/src/app/pages/dashboard/category-tiles.component.html
+++ b/src/app/pages/dashboard/category-tiles.component.html
@@ -32,11 +32,18 @@
     <div class="col-lg-4 col-md-6 mb-3" *ngFor="let category of categories">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">{{ category.name }}</h5>
+          <div class="d-flex justify-content-between align-items-center">
+            <h5 class="card-title mb-0">{{ category.name }}</h5>
+                <button class="btn delete-category-btn" (click)="deleteCategory(category.id)">
+                  <i class="bi bi-trash"></i>
+                </button>  
+          </div>
+  
           <!-- <p class="card-text">{{ category.categoryType }}</p> -->
           <p class="card-amount">{{ category.totalAmount | currency:'zł' }}</p>
           <a [routerLink]="['/categories', category.id, 'transactions']"
             [queryParams]="{ month: defaultMonth.format('YYYY-MM') }" class="btn btn-primary">Zobacz Transakcje</a>
+        </div>
         </div>
       </div>
     </div>
@@ -50,4 +57,4 @@
       </div>
     </div>
   </div>
-</div>
+
