--- a/src/app/pages/dashboard/category-tiles.component.html
+++ b/src/app/pages/dashboard/category-tiles.component.html
@@ -34,16 +34,15 @@
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-center">
             <h5 class="card-title mb-0">{{ category.name }}</h5>
-                <button class="btn delete-category-btn" (click)="deleteCategory(category.id)">
-                  <i class="bi bi-trash"></i>
-                </button>  
+            <button class="btn delete-category-btn" (click)="deleteCategory(category.id)">
+              <i class="bi bi-trash"></i>
+            </button>
           </div>
-  
+
           <!-- <p class="card-text">{{ category.categoryType }}</p> -->
           <p class="card-amount">{{ category.totalAmount | currency:'zł' }}</p>
           <a [routerLink]="['/categories', category.id, 'transactions']"
             [queryParams]="{ month: defaultMonth.format('YYYY-MM') }" class="btn btn-primary">Zobacz Transakcje</a>
-        </div>
         </div>
       </div>
     </div>
@@ -58,3 +57,13 @@
     </div>
   </div>
 
+  <!-- wykres -->
+  <div class="row mt-4">
+    <div class="col-lg-12">
+      <div style="display: block;">
+        <canvas id="chartCanvas" baseChart [data]="barChartData" [options]="barChartOptions" [type]="barChartType">
+        </canvas>
+      </div>
+    </div>
+  </div>
+</div>
